# functional-data-structures

./: README.md  functional-data-structures.cabal
Benchmark/: Heap.hs  Utils.hs
Data/: Types.hs
Data/Heap/: Leftist.hs  Naive.hs  Types.hs  Utils.hs
Data/Set/: BST.hs  Types.hs
app/: Main.hs
