cabal-version:      2.4
name:               functional-data-structures
version:            0.1.0.0

author:             Dreary Lisper
maintainer:         drearylisper@gmail.com

executable functional-data-structures
    main-is:          Main.hs

    build-depends:    base ^>=4.14.3.0, data
    hs-source-dirs:   app
    default-language: Haskell2010

library data
    exposed-modules:  Data.Heap.Leftist, Data.Types
    build-depends:    base ^>=4.14.3.0
    default-language: Haskell2010