cabal-version:      3.0
name:               functional-data-structures
version:            0.1.0.0

author:             Dreary Lisper
maintainer:         drearylisper@gmail.com

executable functional-data-structures
    main-is:          Main.hs

    build-depends:    base ^>=4.17.2.1,  data
    hs-source-dirs:   app
    default-language: Haskell2010

library data
    exposed-modules:  Data.Heap.Leftist, Data.Heap.Naive, Data.Heap.Utils, Data.Heap.Types,
                      Data.Set.BST, Data.Set.Types
    build-depends:    base ^>=4.17.2.1
    default-language: Haskell2010